--- a/README
+++ b/README
@@ -29,7 +29,7 @@ This is a **responsive personal portfolio website** built using **HTML and CSS**
 
 ## 🌐 Live Preview
 
-> 🔗 [Click here to view the live website](https://yourusername.github.io/your-repo-name/)
+> 🔗 [Click here to view the live website](https://shraddha-ravankar.github.io/portfolio/)
 
 *(Replace with your actual GitHub Pages URL)*
 
